# ONNXStego

./: LICENSE  README.md  SECURITY.md  pyproject.toml
proof/: README.md  manifest.json
scripts/: build_proof.py  empirical_demo.py
src/onnxstego/: __init__.py  __main__.py  bits.py  cli.py  core.py  crypto.py  empirical.py  onnx_io.py  positions.py  selection.py
tests/: helpers.py  test_bits.py  test_core_roundtrip.py  test_crypto.py  test_empirical.py  test_onnx_io.py  test_positions.py  test_selection.py
