[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onnx-stego"
version = "0.1.0"
description = "Authenticated steganography for short messages in ONNX float32 weights."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["onnx", "steganography", "cryptography", "watermarking", "machine-learning"]
dependencies = [
  "cryptography>=42",
  "numpy>=1.26",
  "onnx>=1.16",
]

[project.optional-dependencies]
dev = [
  "onnxruntime>=1.17",
  "pytest>=8",
]

[project.scripts]
onnx-stego = "onnxstego.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
